--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <html>
 
   <head>
-    <img src="WebBanner.png+ alt="Banner" width="900" height="300">
-  </head>
+    <head>
+      <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">
+      
+    </head>
+  
   
 </html>
