--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <html>
 
   <head>
-    <head>
-      <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">
-      
-    </head>
-  
-  
+    <h2>URN 6796955</h2>
+  </head>
+
 </html>
