--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <head>
     <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">
   </head>
-
+    <h1><B>ENG0018 Computer Laboratory 2023/24</B></h1>
+    <h2>Student URN: 6796955</h2>
 </html>
