--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1><B>ENG0018 Computer Laboratory 2023/24</B></h1>
     <h2>Student URN: 6796955</h2>
   <hr>
-  <h2 style="font-family:calibri;"><b>Conference:Bridge Deck Repair</b></h2>
+  <h2 style="font-family:calibri;"><b>Conference paper:Bridge Deck Repair</b></h2>
   <hr> 
   <!style for tables>
     <style>
@@ -40,3 +40,5 @@
       }
     </style>
 </html>
+
+<meta name="viewport" content="width=device-width, initial-scale
