--- a/index.html
+++ b/index.html
@@ -70,4 +70,12 @@
       <td><a href="#References">References</td>
     </tr>
   </table>
-  
+  <p id="date&time"></p>
+
+  <script>
+    //Javascript to display the date and time on my webpage
+
+    const d = new Date();
+    document.getElementByld("date&time").innerHTML = d;
+    
+  </script>
