--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
       <td><a href="#References">References</td>
     </tr>
   </table>
-  
+
   <p id="date&time"></p>
 
   <script>
-    //Javascript to display the date and time on my webpage
+    //Javascript to display the datev and time o nym webpage
 
     const d = new Date();
     document.getElementByld("date&time").innerHTML = d;
-    
+
   </script>
