--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
   <p id="date&time"></p>
 
   <script>
-    //Javascript to display the datev and time o nym webpage
+    //Javascript to display the datev and time on my webpage
 
-    const d = new Date();
+    const d=new Date();
     document.getElementByld("date&time").innerHTML = d;
 
   </script>
