--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     This paper presents the aerodynamic structure of the Eurofighter Typhoon Jet
   </pre>
 </p>
+  <h3 id="Introduction">Introduction</h3>
+  <p class=
   <!table of contents>
   <table>
 
