--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
   </pre>
 </p>
   <h3 id="Introduction">Introduction</h3>
-  <p class=
+  <p class="ex1">
+    <pre>
+      This is my introduction
+    </pre>
   <!table of contents>
   <table>
 
@@ -78,12 +81,4 @@
     </tr>
   </table>
 
-  <p id="date&time"></p>
-
-  <script>
-    //Javascript to display the datev and time on my webpage
-
-    const d=new Date();
-    document.getElementByld("date&time").innerHTML = d;
-
-  </script>
+  
