--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
     <pre>
       This is my introduction
     </pre>
+  <h3 id="Analysis and discussion">Analysis and discussion</h3>
+  <p class="ex1">
+    <pre>
+      This is my analysis and discussion
+    </pre>
   <!table of contents>
   <table>
 
