--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
     <pre>
       This is my analysis and discussion
     </pre>
+  <h3 id="References">References</h3>
+  <p>
+    <pre>
+      <a href="https://www.airforce-technology.com/projects/ef2000/#:~:text=Eurofighter%20Typhoon%20design&text=Stealth%20technology%20features%20include%20low,low%20drag%20and%20enhanced%20lift"> Toshiko  et  al (2023).</a>
+    </pre>
+  </p>
   <!table of contents>
   <table>
 
