--- a/index.html
+++ b/index.html
@@ -92,4 +92,11 @@
     </tr>
   </table>
 
+  <p id="date&time"></p>
+  <script>
+    //Javascript to display the date and time on my webpage
+    const d = new Date();
+    document.getElementByld("date&time").innerHTML = d;
+  </script>
+
   
