--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
   <h3 id="Introduction">Introduction</h3>
   <p class="ex1">
     <pre>
-      This is my introduction
+      The Eurofighter Typhoon took its first maiden flight with its initial Demonstrator Aircraft on March 27, 1994 (Royal Air Force, 2023).
     </pre>
   <h3 id="Analysis and discussion">Analysis and discussion</h3>
   <p class="ex1">
     <pre>
-      This is my analysis and discussion
+      The role of the aircraft has intensified since the first embarkment in 1979 (Royal Air Force, 2023) with it’s now main objective being quick reaction alert (RQA) for all UK airspace, using air defence also in the Baltic and Black Sea regions (Royal Air Force, 2023). Design aims of the 
     </pre>
   <h3 id="References">References</h3>
   <p>
