--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
   <h3 id="Analysis and discussion">Analysis and discussion</h3>
   <p class="ex1">
     <pre>
-      The role of the aircraft has intensified since the first embarkment in 1979 (Royal Air Force, 2023) with it’s now main objective being quick reaction alert (RQA) for all UK airspace, using air defence also in the Baltic and Black Sea regions (Royal Air Force, 2023). Design aims of the 
+      The role of the aircraft has intensified since the first embarkment in 1979 (Royal Air Force, 2023) with it’s now main objective being quick reaction alert (RQA) for all UK airspace,
+       using air defence also in the Baltic and Black Sea regions (Royal Air Force, 2023). Design aims of the 
     </pre>
   <h3 id="References">References</h3>
   <p>
