--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ The Eurofighter Typhoon is said to be the “world’s most advanced combat airc
       It wasn’t until 1987 in which the new build of aircraft was developed, and it became the formal specification for the Typhoon, using new engines and an entirely new radar system. (Royal Air Force, no date).
       However, it is such an unstable aircraft that it cannot be flown alone by a human and needs a computerised system to return the aircraft to safe flight stability if it is necessary (Eurofighter Typhoon Multirole Combat Fighter, 2020).
       The development of such an unstable aircraft seems strange but the Eurofighter has become “The world’s most advanced combat aircraft” (Eurofighter Typhoon, no date)
+  
     </pre>
   <h3 id="Analysis and discussion">Analysis and discussion</h3>
   <p class="ex1">
@@ -100,11 +101,13 @@ The Eurofighter Typhoon is said to be the “world’s most advanced combat airc
       The Eurofighter has many key features which aid its agility at supersonic speeds, its highest speed being 1.8 Mach (Figure 1)( Royal Air Force, no date).
       The aims of the fighter are to be intentionally aerodynamically unstable in order to provide the aircraft with extreme agility and such extreme speeds (Eurofighter Typhoon Multirole Combat Fighter, 2020).  
       The general instability of the aircraft comes from the position on its longitudinal axis which is calculated using the lift that is contributed from each of the components of the aircraft such as each wing (Eurofighter Typhoon, no date).  
-      The Eurofighter FGR4 is comprised of a delta-wing configuration (Royal Air Force, no date), this configuration of wing type is deliberately unstable to provide superior levels of agility at supersonic speeds with low drag (Eurofighter Typhoon Multirole Combat Fighter, 2020). Delta wings are triangular-shaped and have a long root chord – this is where the wing joins the fuselage (the main body) of the aircraft. 
+      The Eurofighter FGR4 is comprised of a delta-wing configuration (Royal Air Force, no date), this configuration of wing type is deliberately unstable to provide superior levels of agility at supersonic speeds with low drag (Eurofighter Typhoon Multirole Combat Fighter, 2020).
+      Delta wings are triangular-shaped and have a long root chord – this is where the wing joins the fuselage (the main body) of the aircraft. 
       This makes it aerodynamically efficient as it can provide more internal space for fuel and other storage (Nuthanapati S, 2021). An issue is, however, these wings do not provide enough lift for the aircraft at low speeds, meaning the configuration is only suitable for aircrafts at high speeds (supersonic flight) (Nuthanapati S, 2021). 
       The advantages of such an unstable wing shape means that this aircraft obtains high levels of agility and enhanced lift, they also have a thin wing thickness which reduces the overall drag of the aircraft and increases lift. (Nuthanapati S, 2021).
       As well as an unstable wing configuration, the position of instability for the FGR4 is outside of its centre of gravity when it is not at supersonic speeds, therefore making it aerodynamically unstable and is impossible to fly without a computer-aid (Eurofighter Typhoon, no date).
-      Once at supersonic speeds this position of instability will move behind its centre of gravity and become stable, also reducing drag, and increasing the lift (Eurofighter Typhoon, no date). In order to combat such extreme instability and make the aircraft controllable, the Eurofighter FGR4 uses a fly-by-wire system (Eurofighter Typhoon Multirole Combat Fighter, 2020). 
+      Once at supersonic speeds this position of instability will move behind its centre of gravity and become stable, also reducing drag, and increasing the lift (Eurofighter Typhoon, no date).
+      In order to combat such extreme instability and make the aircraft controllable, the Eurofighter FGR4 uses a fly-by-wire system (Eurofighter Typhoon Multirole Combat Fighter, 2020). 
       This fly-by-wire system is a computer system which provides stabilisation (Eurofighter Typhoon Multirole Combat Fighter, 2020) and prevents the aircraft from performing any manoeuvres which are outside of its capabilities also the system reacts quicker than any pilot could, creating a safer flight dynamic (Marsh G, 2003). 
 
       Overall the instability of the Eurofighter Typhoon is concluded with the majority of instability coming from its wing configuration when the aircraft is at lower speeds than supersonic (Nuthanapati S, 2021).  
