--- a/index.html
+++ b/index.html
@@ -99,6 +99,37 @@ The Eurofighter Typhoon is said to be the “world’s most advanced combat airc
      The role of the aircraft has intensified since the first embarkment in 1979 (Royal Air Force, no date) with its now main objective being quick reaction alert (RQA) for all UK airspace, using air defence in the Baltic and Black Sea regions (Royal Air Force, no date). 
       The typhoon has been developed in order to have multi-role capabilities (Royal Air Force, no date) and be able to perform in high intensity conflict battles and also provide peace support amongst UK airspace (Royal Air Force, no date).  
       The Eurofighter has many key features which aid its agility at supersonic speeds, its highest speed being 1.8 Mach (Figure 1)( Royal Air Force, no date).
+      Table 1: data on the features of the Eurofighter Typhoon
+      <table>
+        <tr>
+        <th>Features</th>  
+          <th>Key Information</th> 
+        </tr>
+          <tr>
+            <td>Engines</td>
+            <td>2 EJ200 power plants engines providing 90kN of power each.</td>
+            </tr>
+        <tr>
+          <td>Length</td>
+          <td>15.96 m</td>
+        </tr>
+        <tr>
+          <td>Wingspan</td>
+          <td>11.09 m</td>
+        </tr>
+        <tr>
+          <td>Maximum Speed</td>
+          <td>Mach 1.8</td>
+        </tr>
+        <tr>
+          <td>Maximum Flying Altitude</td>
+          <td>55,000ft</td>
+        </tr>
+        <tr>
+          <td>"Breaks off to Mach 1.5"</td>
+          <td>2 minutes 30 seconds</td>
+        </tr>
+         </table>
       The aims of the fighter are to be intentionally aerodynamically unstable in order to provide the aircraft with extreme agility and such extreme speeds (Eurofighter Typhoon Multirole Combat Fighter, 2020).  
       The general instability of the aircraft comes from the position on its longitudinal axis which is calculated using the lift that is contributed from each of the components of the aircraft such as each wing (Eurofighter Typhoon, no date).  
       The Eurofighter FGR4 is comprised of a delta-wing configuration (Royal Air Force, no date), this configuration of wing type is deliberately unstable to provide superior levels of agility at supersonic speeds with low drag (Eurofighter Typhoon Multirole Combat Fighter, 2020).
