--- a/index.html
+++ b/index.html
@@ -74,9 +74,12 @@
 <p class="ex1">
   <pre>
 Abstract:
-The Eurofighter Typhoon is said to be the “world’s most advanced combat aircraft” (Eurofighter Typhoon, no date), however, such an advanced piece of technology is one of the most unstable aircrafts to pe produced. 
-The unstable aerodynamic structure of its wings and position of instability being outside of its centre of gravity during subsonic speeds produces an un-flyable aircraft by a human alone (Eurofighter Typhoon Multirole Combat Fighter, 2020). 
-The delta wing configuration provides enhanced lift and agility for the Eurofighter despite being extremely unstable at lower, subsonic speeds making it suitable for such a fast-moving jet. 
+The Eurofighter Typhoon is said to be the “world’s most advanced combat aircraft” (Eurofighter Typhoon, no date), however, such an advanced piece of technology
+    is one of the most unstable aircrafts to pe produced. 
+The unstable aerodynamic structure of its wings and position of instability being outside of its centre of gravity during subsonic speeds produces an
+    un-flyable aircraft by a human alone (Eurofighter Typhoon Multirole Combat Fighter, 2020). 
+The delta wing configuration provides enhanced lift and agility for the Eurofighter despite being extremely unstable at lower, 
+    subsonic speeds making it suitable for such a fast-moving jet. 
 Only when the aircraft is at supersonic speeds does the position of instability become inside the Jet, making it stable.
 
   </pre>
@@ -84,20 +87,27 @@ Only when the aircraft is at supersonic speeds does the position of instability 
   <h3 id="Introduction">Introduction</h3>
   <p class="ex1">
     <pre>
-The Eurofighter Typhoon took its first maiden flight with its Initial Demonstrator Aircraft on March 27, 1994 (Royal Air Force, no date) and is scheduled to be in service with the RAF until 2040 (Eurofighter Typhoon Multirole Combat Fighter, 2020).
-Its origins stem back to 1979 in which the RAF hoped to make a replacement for the Harrier Jet, and so at the time West Germany, France Italy and Spain collaborated to produce the replacement.
+The Eurofighter Typhoon took its first maiden flight with its Initial Demonstrator Aircraft on March 27, 1994 (Royal Air Force, no date) and is
+      scheduled to be in service with the RAF until 2040 (Eurofighter Typhoon Multirole Combat Fighter, 2020).
+Its origins stem back to 1979 in which the RAF hoped to make a replacement for the Harrier Jet, and so at the time West Germany, France Italy and
+      Spain collaborated to produce the replacement.
 However, little input was given which led to just one Experimental Aircraft being produced.
-This aircraft contained the same engines as the previous “Tornado” Jet and quickly became the base model for the Eurofighter Typhoon (Royal Air Force, no date).
-It wasn’t until 1987 in which the new build of aircraft was developed, and it became the formal specification for the Typhoon, using new engines and an entirely new radar system. (Royal Air Force, no date).
-However, it is such an unstable aircraft that it cannot be flown alone by a human and needs a computerised system to return the aircraft to safe flight stability if it is necessary (Eurofighter Typhoon Multirole Combat Fighter, 2020).
+This aircraft contained the same engines as the previous “Tornado” Jet and quickly became the base model for the Eurofighter 
+      Typhoon (Royal Air Force, no date).
+It wasn’t until 1987 in which the new build of aircraft was developed, and it became the formal specification for the Typhoon, using new engines and
+      an entirely new radar system. (Royal Air Force, no date).
+However, it is such an unstable aircraft that it cannot be flown alone by a human and needs a computerised system to return the aircraft to safe flight
+      stability if it is necessary (Eurofighter Typhoon Multirole Combat Fighter, 2020).
 The development of such an unstable aircraft seems strange but the Eurofighter has become “The world’s most advanced combat aircraft” (Eurofighter Typhoon, no date)
   
     </pre>
   <h3 id="Analysis and discussion">Analysis and discussion</h3>
   <p class="ex1">
     <pre>
-The role of the aircraft has intensified since the first embarkment in 1979 (Royal Air Force, no date) with its now main objective being quick reaction alert (RQA) for all UK airspace, using air defence in the Baltic and Black Sea regions (Royal Air Force, no date).
-  The typhoon has been developed in order to have multi-role capabilities (Royal Air Force, no date) and be able to perform in high intensity conflict battles and also provide peace support amongst UK airspace (Royal Air Force, no date).  
+The role of the aircraft has intensified since the first embarkment in 1979 (Royal Air Force, no date) with its now main objective being quick reaction alert (RQA) for
+      all UK airspace, using air defence in the Baltic and Black Sea regions (Royal Air Force, no date).
+  The typhoon has been developed in order to have multi-role capabilities (Royal Air Force, no date) and be able to perform in high intensity conflict battles and
+      also provide peace support amongst UK airspace (Royal Air Force, no date).  
 The Eurofighter has many key features which aid its agility at supersonic speeds, its highest speed being 1.8 Mach (Figure 1)( Royal Air Force, no date).
 Table 1: data on the features of the Eurofighter Typhoon
       <table>
@@ -131,16 +141,21 @@ Table 1: data on the features of the Eurofighter Typhoon
         </tr>
          </table>
   The aims of the fighter are to be intentionally aerodynamically unstable in order to provide the aircraft with extreme agility and such extreme speeds (Eurofighter Typhoon Multirole Combat Fighter, 2020).  
-  The general instability of the aircraft comes from the position on its longitudinal axis which is calculated using the lift that is contributed from each of the components of the aircraft such as each wing (Eurofighter Typhoon, no date).  
-  The Eurofighter FGR4 is comprised of a delta-wing configuration (Royal Air Force, no date), this configuration of wing type is deliberately unstable to provide superior levels of agility at supersonic speeds with low drag (Eurofighter Typhoon Multirole Combat Fighter, 2020).
+  The general instability of the aircraft comes from the position on its longitudinal axis which is calculated using the lift that is contributed from each of the components of the aircraft
+      such as each wing (Eurofighter Typhoon, no date).  
+  The Eurofighter FGR4 is comprised of a delta-wing configuration (Royal Air Force, no date), this configuration of wing type is deliberately unstable to provide superior levels of
+      agility at supersonic speeds with low drag (Eurofighter Typhoon Multirole Combat Fighter, 2020).
   Delta wings are triangular-shaped and have a long root chord – this is where the wing joins the fuselage (the main body) of the aircraft. 
   This makes it aerodynamically efficient as it can provide more internal space for fuel and other storage (Nuthanapati S, 2021).
   An issue is, however, these wings do not provide enough lift for the aircraft at low speeds, meaning the configuration is only suitable for aircrafts at high speeds (supersonic flight) (Nuthanapati S, 2021). 
-  The advantages of such an unstable wing shape means that this aircraft obtains high levels of agility and enhanced lift, they also have a thin wing thickness which reduces the overall drag of the aircraft and increases lift. (Nuthanapati S, 2021).
-  As well as an unstable wing configuration, the position of instability for the FGR4 is outside of its centre of gravity when it is not at supersonic speeds, therefore making it aerodynamically unstable and is impossible to fly without a computer-aid (Eurofighter Typhoon, no date).
+  The advantages of such an unstable wing shape means that this aircraft obtains high levels of agility and enhanced lift, they also have a thin wing thickness which reduces the overall 
+      drag of the aircraft and increases lift. (Nuthanapati S, 2021).
+  As well as an unstable wing configuration, the position of instability for the FGR4 is outside of its centre of gravity when it is not at supersonic speeds, therefore making it aerodynamically
+      unstable and is impossible to fly without a computer-aid (Eurofighter Typhoon, no date).
   Once at supersonic speeds this position of instability will move behind its centre of gravity and become stable, also reducing drag, and increasing the lift (Eurofighter Typhoon, no date).
   In order to combat such extreme instability and make the aircraft controllable, the Eurofighter FGR4 uses a fly-by-wire system (Eurofighter Typhoon Multirole Combat Fighter, 2020). 
-  This fly-by-wire system is a computer system which provides stabilisation (Eurofighter Typhoon Multirole Combat Fighter, 2020) and prevents the aircraft from performing any manoeuvres which are outside of its capabilities also the system reacts quicker than any pilot could,
+  This fly-by-wire system is a computer system which provides stabilisation (Eurofighter Typhoon Multirole Combat Fighter, 2020) and prevents the aircraft from performing any manoeuvres which
+      are outside of its capabilities also the system reacts quicker than any pilot could,
   creating a safer flight dynamic (Marsh G, 2003). 
 
   Overall, the instability of the Eurofighter Typhoon is concluded with the majority of instability coming from its wing configuration when the aircraft is at lower speeds than supersonic (Nuthanapati S, 2021).  
