--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <style>
       p.ex1 {
         margin-left: 250px;
-        font-size: 1.5em; /* 14px/16=0.875em */
+        font-size:40px;
       }
      
   
