--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <style>
       p.ex1 {
         margin-left: 250px;
-        font-size:40px;
+        
       }
      
   
@@ -75,7 +75,8 @@
 <body style="background-colour#FFFFFF;margin-left:50px;">
 <hr>
   <h3 id="Abstract">Abstract</h3>
-<p class="ex1">
+  <p style="color:blue;font-size:18px;">
+<!p class="ex1">
   <pre>
 The Eurofighter Typhoon is said to be the “world’s most advanced combat aircraft” (Eurofighter Typhoon, no date), however, such an advanced piece of technology
 is one of the most unstable aircrafts to pe produced. 
