--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@ Only when the aircraft is at supersonic speeds does the position of instability 
 
 </p>
   <h3 id="Introduction">Introduction</h3>
-  <p class="ex1">
-    <pre>
+  <p style="font-size:18px;">
 The Eurofighter Typhoon took its first maiden flight with its Initial Demonstrator Aircraft on March 27, 1994 (Royal Air Force, no date) and is
 scheduled to be in service with the RAF until 2040 (Eurofighter Typhoon Multirole Combat Fighter, 2020).
 Its origins stem back to 1979 in which the RAF hoped to make a replacement for the Harrier Jet, and so at the time West Germany, France Italy and
@@ -103,7 +102,7 @@ However, it is such an unstable aircraft that it cannot be flown alone by a huma
 stability if it is necessary (Eurofighter Typhoon Multirole Combat Fighter, 2020).
 The development of such an unstable aircraft seems strange but the Eurofighter has become “The world’s most advanced combat aircraft” (Eurofighter Typhoon, no date)
   
-    </pre>
+   
   <h3 id="Analysis and discussion">Analysis and discussion</h3>
   <p class="ex1">
     <pre>
