--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@ Table 1: data on the features of the Eurofighter Typhoon
           <td>2 minutes 30 seconds</td>
         </tr>
          </table>
+  <p style="font-size:18px;">
   The aims of the fighter are to be intentionally aerodynamically unstable in order to provide the aircraft with extreme agility and such extreme speeds (Eurofighter Typhoon Multirole Combat Fighter, 2020).  
   The general instability of the aircraft comes from the position on its longitudinal axis which is calculated using the lift that is contributed from each of the components of the aircraft
   such as each wing (Eurofighter Typhoon, no date).  
