--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Only when the aircraft is at supersonic speeds does the position of instability 
   <p style="font-size:18px;">
 The Eurofighter Typhoon took its first maiden flight with its Initial Demonstrator Aircraft on March 27, 1994 (Royal Air Force, no date) and is
 scheduled to be in service with the RAF until 2040 (Eurofighter Typhoon Multirole Combat Fighter, 2020).
-Its origins stem back to 1979 in which the RAF hoped to make a replacement for the Harrier Jet, and so at the time West Germany, France Italy and
+Its origins stem back to 1979 in which the RAF hoped to make a replacement for the Harrier Jet, and so at the time West Germany, France, Italy and
 Spain collaborated to produce the replacement.
 However, little input was given which led to just one Experimental Aircraft being produced.
 This aircraft contained the same engines as the previous “Tornado” Jet and quickly became the base model for the Eurofighter 
