--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1><B>ENG0018 Computer Laboratory 2023/24</B></h1>
     <h2>Student URN: 6796955</h2>
   <hr>
-  <h2 style="font-family:calibri;"><b>Conference paper:Aerodynamics of the Eurofighter Jet</b></h2>
+  <h2 style="font-family:calibri;"><b>Conference paper: The instability of the Eurofighter Jet</b></h2>
   <hr> 
   <!style for tables>
     <style>
