--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@
     </tr>
   </table>
 
-<body style="background-colour#FFFFFF;margin-left:50px;">
+<body style="background-colour#FFFFFF;margin-left:50px;"
 <hr>
   <h3 id="Abstract">Abstract</h3>
+
+    
  <style>
- font-family: arial, sans-serif;   
- 
+    font-family: arial, sans-serif;
+ </style>
 <pre>
 The Eurofighter Typhoon is said to be the “world’s most advanced combat aircraft” (Eurofighter Typhoon, no date), however, such an advanced piece of technology
 is one of the most unstable aircrafts to pe produced. 
@@ -195,7 +197,7 @@ The Eurofighter has many key features which aid its agility at supersonic speeds
     </pre>   
     
   </p>
-  </style>
+</style>
 <p id="date&time"></p>
 
 <script>
