--- a/index.html
+++ b/index.html
@@ -37,14 +37,22 @@
     <style>
       p.ex1 {
         margin-left: 250px;
-        
+        font-family: 'Verdana', sans-serif;
       }
-     
-  
-
+         </style>
+  <style>
+    h1 {text-align: center;}
+    h2 {text-align: center;}
+    h3 {text-align: center;}
+    h4 {text-align: center;}
+    p {text-align: center;}
+    pre {text-align: center;}
+    table {text-align: center;}
+    img {text-align: center;}
     </style>
+  
 </html>
-
+<style>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
