--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!style for tables>
     <style>
         table {
+          align: center;
           font-family: arial, sans-serif;
           border collapse: collapse;
           width: 30%;
