--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     <style>
       p.ex1 {
         margin-left: 250px;
-        font-family: 'Verdana', sans-serif;
+        text-align: justify;
+        text-justify: inter-word;
+        
       }
          </style>
   <style>
