--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <style>
         table {   
           font-family: arial, sans-serif;
-          align: center;
           border collapse: collapse;
           width: 30%;
 
@@ -22,7 +21,7 @@
 
         td, th {
           border: 1px solid #dddddd;
-          text-align: left;
+          text-align: center;
           padding: 8px;
         }
 
@@ -56,9 +55,6 @@
 </style>
 
 <!table of contents>
-<style>
-  align: center;
-  </style>
   <table>
 
     <tr>
@@ -122,6 +118,9 @@ The Eurofighter has many key features which aid its agility at supersonic speeds
   </pre>
     Table 1: data on the features of the Eurofighter Typhoon
       <table>
+        <style>
+          text-align: center;
+          </style>
         
         <tr>
         <th>Features</th>  
