--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <hr> 
   <!style for tables>
     <style>
-        table {   
+        table {
+          align: center;
           font-family: arial, sans-serif;
           border collapse: collapse;
           width: 30%;
