--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <td><a href="#Introduction">Introduction</td>
     </tr>
     <tr>
-      <td><a href="#Analysis and discussion">Analysis and discussion</td>
+      <td><a href="#Instability of the Aircraft">Instability of the Aircraft</td>
     </tr>
 
     <tr>
