--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           border: 1px solid #dddddd;
           text-align: center;
           padding: 8px;
+          align: center;
         }
 
       tr:nth-child(even) {
@@ -31,7 +32,7 @@
 
      p.ex1 {
         margin-left: 250px;
-        text-align: justify;
+        text-align: center;
         text-justify: inter-word;
        font-family: 'Verdana', sans-serif;
         
@@ -41,6 +42,7 @@
         h2 {text-align: center;}
         h3 {text-align: center;}
         p {text-align: center;}
+      pre {text-align: center;}
         table {text-align: center;}
 
   
