--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         h3 {text-align: center;}
         p {text-align: center;}
       pre {text-align: center;}
-        table {text-align: center;}
+        table {align: center;}
 
   
     </style>
