--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@ The Eurofighter has many key features which aid its agility at supersonic speeds
 </p>
     Table 1: data on the features of the Eurofighter Typhoon
       <table>
+        <style>
+          align: center;
+          </style
        <tr>
         <th>Features</th>  
           <th>Key Information</th> 
