--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
           align: center;
           border collapse: collapse;
           width: 30%;
-
+          </style>
+<style>
         }
 
         td, th {
@@ -26,28 +27,28 @@
           padding: 8px;
           align: center;
         }
-
+</style>
+  <style>
       tr:nth-child(even) {
         background-colour: #dddddd;
       }
-
+</style>
+  <style>
      p.ex1 {
         margin-left: 250px;
         text-align: center;
         text-justify: inter-word;
-       font-family: 'Verdana', sans-serif;
         
       }
-
+</style>
+  <style>
       h1 {text-align: center;}
         h2 {text-align: center;}
         h3 {text-align: center;}
         p {text-align: center;}
       pre {text-align: center;}
       
-
-  
-    </style>
+</style>
   
 </html>
 
