--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ The Eurofighter has many key features which aid its agility at supersonic speeds
   are outside of its capabilities also the system reacts quicker than any pilot could,
   creating a safer flight dynamic <a href="Reference 4">(Marsh G, 2003)</a>. 
 </pre>
-  <pre>
+  <pre style="font-size:18px;">
   Overall, the instability of the Eurofighter Typhoon is concluded with the majority of instability coming from its wing configuration when the aircraft is at lower speeds than supersonic (Nuthanapati S, 2021).  
   The delta-wings do not provide the aircraft with enough lift at subsonic speeds thus making the Eurofighter unfly-able with just the pilot alone <a href="Reference 1">(Eurofighter Typhoon Multirole Combat Fighter, 2020)</a>. 
   These factors heavily contribute to the instability of the aircraft but give it the extreme agility that it needs to perform the vital roles such as keeping peace and air-combat. 
