--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <hr>
   <h3 id="Abstract">Abstract</h3>
   <p style="font-size:18px;">
-<pre style="font-size:18px,font-family:calibri;">
+<pre style="font-size:18px;">
 The Eurofighter Typhoon is said to be the “world’s most advanced combat aircraft” <a href="Reference 2">(Eurofighter Typhoon, no date)</a>, however, such an advanced piece of technology
 is one of the most unstable aircrafts to pe produced. 
 The unstable aerodynamic structure of its wings and position of instability being outside of its centre of gravity during subsonic speeds produces an
