--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   <h3 id="Abstract">Abstract</h3>
   <p style="font-size:20px;">
 <pre style="font-size:20px;">
+   <pre style="font-family:calibri;">
 The Eurofighter Typhoon is said to be the “world’s most advanced combat aircraft” <a href="Reference 2">(Eurofighter Typhoon, no date)</a>, however, such an advanced piece of technology
 is one of the most unstable aircrafts to pe produced. 
 The unstable aerodynamic structure of its wings and position of instability being outside of its centre of gravity during subsonic speeds produces an
@@ -89,6 +90,7 @@ Only when the aircraft is at supersonic speeds does the position of instability 
   <h3 id="Introduction">Introduction</h3>
   <p>
   <pre style="font-size:20px;">
+     <pre style="font-family:calibri;">
 The Eurofighter Typhoon took its first maiden flight with its Initial Demonstrator Aircraft on March 27, 1994 <a href="Reference 6">(Royal Air Force, no date)</a> and is
 scheduled to be in service with the RAF until 2040 <a href="Reference 1">(Eurofighter Typhoon Multirole Combat Fighter, 2020)</a>.
 Its origins stem back to 1979 in which the RAF hoped to make a replacement for the Harrier Jet, and so at the time West Germany, France, Italy and
@@ -107,6 +109,7 @@ The development of such an unstable aircraft seems strange but the Eurofighter h
   <h3 id="Instability of the Aircraft">Instability of the Aircraft</h3>
   <p>
   <pre style="font-size:20px;">
+     <pre style="font-family:calibri;">
 The role of the aircraft has intensified since the first embarkment in 1979 <a href="Reference 6">(Royal Air Force, no date)</a> with its now main objective being quick reaction alert (RQA) for
 all UK airspace, using air defence in the Baltic and Black Sea regions <a href="Reference 6">(Royal Air Force, no date)</a>.
 The typhoon has been developed in order to have multi-role capabilities (Royal Air Force, no date) and be able to perform in high intensity conflict battles and
@@ -167,6 +170,7 @@ The Eurofighter has many key features which aid its agility at supersonic speeds
   creating a safer flight dynamic <a href="Reference 4">(Marsh G, 2003)</a>. 
 </pre>
   <pre style="font-size:20px;">
+     <pre style="font-family:calibri;">
   Overall, the instability of the Eurofighter Typhoon is concluded with the majority of instability coming from its wing configuration when the aircraft is at lower speeds than supersonic (Nuthanapati S, 2021).  
   The delta-wings do not provide the aircraft with enough lift at subsonic speeds thus making the Eurofighter unfly-able with just the pilot alone <a href="Reference 1">(Eurofighter Typhoon Multirole Combat Fighter, 2020)</a>. 
   These factors heavily contribute to the instability of the aircraft but give it the extreme agility that it needs to perform the vital roles such as keeping peace and air-combat. 
