--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <style>
         table {
           font-family: arial, sans-serif;
+          font-size:18px;
           text-align: center;
           border collapse: collapse;
           width: 30%;
